[gd_scene load_steps=28 format=3 uid="uid://byoqgvdrva32a"]

[ext_resource type="Script" path="res://Scripts/final_fight.gd" id="1_f562o"]
[ext_resource type="Script" path="res://Scripts/laser_lateral.gd" id="1_si0r2"]
[ext_resource type="Script" path="res://Scripts/laser_descendo.gd" id="2_de2sf"]
[ext_resource type="Shader" path="res://Shaders/ray.gdshader" id="3_yvjg6"]
[ext_resource type="Texture2D" uid="uid://c3c326k0i6n2o" path="res://Sprites/square.png" id="4_w4dbs"]
[ext_resource type="Script" path="res://Scripts/ray_shader_inimigo.gd" id="5_ydi5y"]
[ext_resource type="Texture2D" uid="uid://dj4bhlbd8spva" path="res://Sprites/cw.png" id="6_1fise"]
[ext_resource type="Texture2D" uid="uid://p0jrjt2fp0da" path="res://Sprites/light.png" id="7_sww62"]
[ext_resource type="Script" path="res://Scripts/mocreia.gd" id="9_j4wkb"]
[ext_resource type="Texture2D" uid="uid://cim4pnyfnp208" path="res://Sprites/vea mocoronga.png" id="10_ugfys"]
[ext_resource type="AudioStream" uid="uid://bs1odvqmwdo6m" path="res://Sound Effects/A_kid_screaming_sound_effect.wav" id="11_kqgsr"]
[ext_resource type="Texture2D" uid="uid://t535f4w4b5xh" path="res://Sprites/bubble.png" id="12_58ee6"]
[ext_resource type="AudioStream" uid="uid://diowllknwb1up" path="res://Musics/360ytmp3.com_320kbps-beethovens-coriolan-overture-op-62-ludwig-van-beethoven-music-classical.mp3" id="13_lcs0c"]
[ext_resource type="AudioStream" uid="uid://b4cp64fjjfh1i" path="res://Sound Effects/674890__craigsmith__s16-22-explosion-bomb-or-shell.wav" id="14_i0hcy"]
[ext_resource type="AudioStream" uid="uid://jlxe3ymtajel" path="res://Sound Effects/261419__archeos__womanscream.wav" id="15_ky1ie"]
[ext_resource type="Texture2D" uid="uid://l3runxl4qp5s" path="res://Sprites/fantasmas/spritesheet.png" id="16_6oomj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bnao7"]
shader = ExtResource("3_yvjg6")
shader_parameter/beams = 2
shader_parameter/energy = 3.0
shader_parameter/roughness = 3
shader_parameter/frequency = 10
shader_parameter/speed = 1.0
shader_parameter/thickness = 0.1
shader_parameter/outline_thickness = 0.034
shader_parameter/beam_difference = 0.0
shader_parameter/glow = 0.0
shader_parameter/outline_glow = 3.0
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/progress = 0.47
shader_parameter/y_offset = 0.0
shader_parameter/fixed_edge_size = 0.5
shader_parameter/noise_scale = Vector2(15, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5aru"]
size = Vector2(15.8686, 0.838324)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gmbo7"]
shader = ExtResource("3_yvjg6")
shader_parameter/beams = 2
shader_parameter/energy = 3.0
shader_parameter/roughness = 3
shader_parameter/frequency = 10
shader_parameter/speed = 1.0
shader_parameter/thickness = 0.1
shader_parameter/outline_thickness = 0.034
shader_parameter/beam_difference = 0.0
shader_parameter/glow = 0.0
shader_parameter/outline_glow = 3.0
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/progress = 0.47
shader_parameter/y_offset = 0.0
shader_parameter/fixed_edge_size = 0.5
shader_parameter/noise_scale = Vector2(15, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_au6u1"]
size = Vector2(15.8686, 0.838324)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_guxpm"]
shader = ExtResource("3_yvjg6")
shader_parameter/beams = 2
shader_parameter/energy = 3.0
shader_parameter/roughness = 3
shader_parameter/frequency = 10
shader_parameter/speed = 1.0
shader_parameter/thickness = 0.1
shader_parameter/outline_thickness = 0.034
shader_parameter/beam_difference = 0.0
shader_parameter/glow = 0.0
shader_parameter/outline_glow = 3.0
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/progress = 0.47
shader_parameter/y_offset = 0.0
shader_parameter/fixed_edge_size = 0.5
shader_parameter/noise_scale = Vector2(15, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bcf3i"]
size = Vector2(15.8686, 0.838324)

[sub_resource type="Animation" id="Animation_5e7if"]
resource_name = "veia_andando"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(986, 492), Vector2(1724, 492), Vector2(164, 492), Vector2(986, 492)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VeaMocoronga:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.29, 0.59, 0.89, 1.2, 1.6, 1.9, 2.3, 2.6, 2.9, 3.2, 3.5, 3.8, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true, false, true, false]
}

[sub_resource type="Animation" id="Animation_v1spr"]
resource_name = "veia_morrendo"
length = 13.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("grito_morte:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Tela Branca:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 6.6, 9.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_or6rp"]
_data = {
"veia_andando": SubResource("Animation_5e7if"),
"veia_morrendo": SubResource("Animation_v1spr")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_221mc"]
radius = 78.0256

[sub_resource type="CircleShape2D" id="CircleShape2D_tia5d"]
radius = 47.0106

[node name="final_fight" type="Node2D"]
position = Vector2(950, 0)
script = ExtResource("1_f562o")

[node name="laser_lateral" type="Node2D" parent="." node_paths=PackedStringArray("inicio", "fim", "content")]
position = Vector2(-876, 572)
script = ExtResource("1_si0r2")
inicio = NodePath("inicio")
fim = NodePath("fim")
content = NodePath("content")
type = 2

[node name="content" type="Node2D" parent="laser_lateral"]

[node name="ray_shader" type="Sprite2D" parent="laser_lateral/content" node_paths=PackedStringArray("lateral")]
light_mask = 513
material = SubResource("ShaderMaterial_bnao7")
position = Vector2(9.5127, 923.065)
rotation = 1.5708
scale = Vector2(194.325, 16.7)
texture = ExtResource("4_w4dbs")
script = ExtResource("5_ydi5y")
lateral = NodePath("Lateral")

[node name="PointLight2D" type="PointLight2D" parent="laser_lateral/content/ray_shader"]
visible = false
blend_mode = 2
texture = ExtResource("6_1fise")
texture_scale = 14.1

[node name="Area2D" type="Area2D" parent="laser_lateral/content/ray_shader"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="laser_lateral/content/ray_shader/Area2D"]
position = Vector2(0.0164268, -0.0598802)
shape = SubResource("RectangleShape2D_j5aru")

[node name="Lateral" type="Node2D" parent="laser_lateral/content/ray_shader"]

[node name="Light2" type="Sprite2D" parent="laser_lateral/content/ray_shader/Lateral"]
position = Vector2(7.87411, -0.0890679)
scale = Vector2(0.00277719, 0.0427769)
texture = ExtResource("7_sww62")

[node name="Light" type="Sprite2D" parent="laser_lateral/content/ray_shader/Lateral"]
position = Vector2(-7.92276, -0.148933)
scale = Vector2(0.00282583, 0.0427769)
texture = ExtResource("7_sww62")

[node name="inicio" type="Marker2D" parent="laser_lateral"]
position = Vector2(17, 20)

[node name="fim" type="Marker2D" parent="laser_lateral"]
position = Vector2(1725, 45)

[node name="lasers_descendo" type="Node2D" parent="."]

[node name="laser_descendo_catedral" type="Node2D" parent="lasers_descendo" node_paths=PackedStringArray("inicio", "fim", "content")]
script = ExtResource("2_de2sf")
inicio = NodePath("inicio")
fim = NodePath("fim")
content = NodePath("content")
speed = 6

[node name="content" type="Node2D" parent="lasers_descendo/laser_descendo_catedral"]

[node name="ray_shader" type="Sprite2D" parent="lasers_descendo/laser_descendo_catedral/content"]
light_mask = 513
material = SubResource("ShaderMaterial_gmbo7")
scale = Vector2(109.469, 16.7)
texture = ExtResource("4_w4dbs")
script = ExtResource("5_ydi5y")

[node name="PointLight2D" type="PointLight2D" parent="lasers_descendo/laser_descendo_catedral/content/ray_shader"]
blend_mode = 2
range_item_cull_mask = 512
texture = ExtResource("6_1fise")
texture_scale = 14.1

[node name="Area2D" type="Area2D" parent="lasers_descendo/laser_descendo_catedral/content/ray_shader"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="lasers_descendo/laser_descendo_catedral/content/ray_shader/Area2D"]
position = Vector2(0.0164268, -0.0598802)
shape = SubResource("RectangleShape2D_au6u1")

[node name="Lateral" type="Node2D" parent="lasers_descendo/laser_descendo_catedral/content/ray_shader"]

[node name="Light2" type="Sprite2D" parent="lasers_descendo/laser_descendo_catedral/content/ray_shader/Lateral"]
position = Vector2(8, -5.96046e-08)
scale = Vector2(0.00604723, 0.0427769)
texture = ExtResource("7_sww62")

[node name="Light" type="Sprite2D" parent="lasers_descendo/laser_descendo_catedral/content/ray_shader/Lateral"]
position = Vector2(-8.04107, -0.419162)
scale = Vector2(0.00604723, 0.0427769)
texture = ExtResource("7_sww62")

[node name="inicio" type="Marker2D" parent="lasers_descendo/laser_descendo_catedral"]
position = Vector2(-427, -17)

[node name="fim" type="Marker2D" parent="lasers_descendo/laser_descendo_catedral"]
position = Vector2(9, 3406)

[node name="laser_descendo_catedral4" type="Node2D" parent="lasers_descendo" node_paths=PackedStringArray("inicio", "fim", "content")]
script = ExtResource("2_de2sf")
inicio = NodePath("inicio")
fim = NodePath("fim")
content = NodePath("content")
atraso = 6000.0
speed = 6

[node name="content" type="Node2D" parent="lasers_descendo/laser_descendo_catedral4"]

[node name="ray_shader" type="Sprite2D" parent="lasers_descendo/laser_descendo_catedral4/content"]
light_mask = 513
material = SubResource("ShaderMaterial_gmbo7")
scale = Vector2(109.469, 16.7)
texture = ExtResource("4_w4dbs")
script = ExtResource("5_ydi5y")

[node name="PointLight2D" type="PointLight2D" parent="lasers_descendo/laser_descendo_catedral4/content/ray_shader"]
blend_mode = 2
range_item_cull_mask = 512
texture = ExtResource("6_1fise")
texture_scale = 14.1

[node name="Area2D" type="Area2D" parent="lasers_descendo/laser_descendo_catedral4/content/ray_shader"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="lasers_descendo/laser_descendo_catedral4/content/ray_shader/Area2D"]
position = Vector2(0.0164268, -0.0598802)
shape = SubResource("RectangleShape2D_au6u1")

[node name="Lateral" type="Node2D" parent="lasers_descendo/laser_descendo_catedral4/content/ray_shader"]

[node name="Light2" type="Sprite2D" parent="lasers_descendo/laser_descendo_catedral4/content/ray_shader/Lateral"]
position = Vector2(8, -5.96046e-08)
scale = Vector2(0.00604723, 0.0427769)
texture = ExtResource("7_sww62")

[node name="Light" type="Sprite2D" parent="lasers_descendo/laser_descendo_catedral4/content/ray_shader/Lateral"]
position = Vector2(-8.04107, -0.419162)
scale = Vector2(0.00604723, 0.0427769)
texture = ExtResource("7_sww62")

[node name="inicio" type="Marker2D" parent="lasers_descendo/laser_descendo_catedral4"]
position = Vector2(-427, -17)

[node name="fim" type="Marker2D" parent="lasers_descendo/laser_descendo_catedral4"]
position = Vector2(9, 3406)

[node name="laser_descendo_catedral3" type="Node2D" parent="lasers_descendo" node_paths=PackedStringArray("inicio", "fim", "content")]
script = ExtResource("2_de2sf")
inicio = NodePath("inicio")
fim = NodePath("fim")
content = NodePath("content")
type = 1
atraso = 0.0
speed = 6

[node name="content" type="Node2D" parent="lasers_descendo/laser_descendo_catedral3"]

[node name="ray_shader" type="Sprite2D" parent="lasers_descendo/laser_descendo_catedral3/content" node_paths=PackedStringArray("lateral")]
light_mask = 512
material = SubResource("ShaderMaterial_guxpm")
scale = Vector2(109.469, 16.7)
texture = ExtResource("4_w4dbs")
script = ExtResource("5_ydi5y")
lateral = NodePath("Lateral")

[node name="PointLight2D" type="PointLight2D" parent="lasers_descendo/laser_descendo_catedral3/content/ray_shader"]
visible = false
blend_mode = 2
texture = ExtResource("6_1fise")
texture_scale = 14.1

[node name="Area2D" type="Area2D" parent="lasers_descendo/laser_descendo_catedral3/content/ray_shader"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="lasers_descendo/laser_descendo_catedral3/content/ray_shader/Area2D"]
position = Vector2(0.0164268, -0.0598802)
shape = SubResource("RectangleShape2D_bcf3i")

[node name="Lateral" type="Node2D" parent="lasers_descendo/laser_descendo_catedral3/content/ray_shader"]

[node name="Light2" type="Sprite2D" parent="lasers_descendo/laser_descendo_catedral3/content/ray_shader/Lateral"]
position = Vector2(8, -5.96046e-08)
scale = Vector2(0.00604723, 0.0427769)
texture = ExtResource("7_sww62")

[node name="Light" type="Sprite2D" parent="lasers_descendo/laser_descendo_catedral3/content/ray_shader/Lateral"]
position = Vector2(-8.04107, -0.419162)
scale = Vector2(0.00604723, 0.0427769)
texture = ExtResource("7_sww62")

[node name="inicio" type="Marker2D" parent="lasers_descendo/laser_descendo_catedral3"]
position = Vector2(-427, -17)

[node name="fim" type="Marker2D" parent="lasers_descendo/laser_descendo_catedral3"]
position = Vector2(9, 3406)

[node name="laser_descendo_catedral2" type="Node2D" parent="lasers_descendo" node_paths=PackedStringArray("inicio", "fim", "content")]
script = ExtResource("2_de2sf")
inicio = NodePath("inicio")
fim = NodePath("fim")
content = NodePath("content")
type = 1
atraso = 4000.0
speed = 6

[node name="content" type="Node2D" parent="lasers_descendo/laser_descendo_catedral2"]

[node name="ray_shader" type="Sprite2D" parent="lasers_descendo/laser_descendo_catedral2/content" node_paths=PackedStringArray("lateral")]
light_mask = 512
material = SubResource("ShaderMaterial_guxpm")
scale = Vector2(109.469, 16.7)
texture = ExtResource("4_w4dbs")
script = ExtResource("5_ydi5y")
lateral = NodePath("Lateral")

[node name="PointLight2D" type="PointLight2D" parent="lasers_descendo/laser_descendo_catedral2/content/ray_shader"]
visible = false
blend_mode = 2
texture = ExtResource("6_1fise")
texture_scale = 14.1

[node name="Area2D" type="Area2D" parent="lasers_descendo/laser_descendo_catedral2/content/ray_shader"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="lasers_descendo/laser_descendo_catedral2/content/ray_shader/Area2D"]
position = Vector2(0.0164268, -0.0598802)
shape = SubResource("RectangleShape2D_bcf3i")

[node name="Lateral" type="Node2D" parent="lasers_descendo/laser_descendo_catedral2/content/ray_shader"]

[node name="Light2" type="Sprite2D" parent="lasers_descendo/laser_descendo_catedral2/content/ray_shader/Lateral"]
position = Vector2(8, -5.96046e-08)
scale = Vector2(0.00604723, 0.0427769)
texture = ExtResource("7_sww62")

[node name="Light" type="Sprite2D" parent="lasers_descendo/laser_descendo_catedral2/content/ray_shader/Lateral"]
position = Vector2(-8.04107, -0.419162)
scale = Vector2(0.00604723, 0.0427769)
texture = ExtResource("7_sww62")

[node name="inicio" type="Marker2D" parent="lasers_descendo/laser_descendo_catedral2"]
position = Vector2(-427, -17)

[node name="fim" type="Marker2D" parent="lasers_descendo/laser_descendo_catedral2"]
position = Vector2(9, 3406)

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(-944, 0)

[node name="mocreia" type="CharacterBody2D" parent="Node2D" node_paths=PackedStringArray("scream_sound", "musica_boss", "shield_sprite", "shield", "veia_sprite", "player_animation") groups=["killable"]]
position = Vector2(1256, 492)
rotation = 3.11708
collision_layer = 33
collision_mask = 33
script = ExtResource("9_j4wkb")
scream_sound = NodePath("grito_veia")
musica_boss = NodePath("musica_boss")
shield_sprite = NodePath("shield_sprite")
shield = NodePath("Bolha_protetora/CollisionShape2D")
veia_sprite = NodePath("VeaMocoronga")
player_animation = NodePath("AnimationPlayer")
counter_limit = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D/mocreia"]
libraries = {
"": SubResource("AnimationLibrary_or6rp")
}

[node name="VeaMocoronga" type="Sprite2D" parent="Node2D/mocreia"]
scale = Vector2(2, 2)
texture = ExtResource("10_ugfys")

[node name="Bolha_protetora" type="StaticBody2D" parent="Node2D/mocreia"]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/mocreia/Bolha_protetora"]
position = Vector2(-3.31773, 12.9226)
shape = SubResource("CircleShape2D_221mc")
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/mocreia"]
position = Vector2(-1.83272, 12.0267)
shape = SubResource("CircleShape2D_tia5d")

[node name="grito_veia" type="AudioStreamPlayer2D" parent="Node2D/mocreia"]
stream = ExtResource("11_kqgsr")

[node name="shield_sprite" type="Sprite2D" parent="Node2D/mocreia"]
position = Vector2(-2.31803, 12.9471)
scale = Vector2(0.07, 0.07)
texture = ExtResource("12_58ee6")

[node name="musica_boss" type="AudioStreamPlayer" parent="Node2D/mocreia"]
stream = ExtResource("13_lcs0c")

[node name="Explosion" type="AudioStreamPlayer" parent="Node2D/mocreia"]
stream = ExtResource("14_i0hcy")
volume_db = -5.0
pitch_scale = 0.7

[node name="grito_morte" type="AudioStreamPlayer" parent="Node2D/mocreia"]
stream = ExtResource("15_ky1ie")
pitch_scale = 0.2

[node name="Tela Branca" type="Sprite2D" parent="Node2D/mocreia"]
modulate = Color(1, 1, 1, 0)
top_level = true
position = Vector2(1006, 364)
scale = Vector2(251.375, 272.8)
texture = ExtResource("4_w4dbs")

[node name="Sprite2D" type="Sprite2D" parent="Node2D/mocreia"]
visible = false
position = Vector2(-195.775, 29.2103)
texture = ExtResource("16_6oomj")
hframes = 11
vframes = 10

[connection signal="body_shape_entered" from="laser_lateral/content/ray_shader/Area2D" to="laser_lateral/content/ray_shader" method="_on_area_2d_body_shape_entered"]
[connection signal="body_shape_entered" from="lasers_descendo/laser_descendo_catedral/content/ray_shader/Area2D" to="lasers_descendo/laser_descendo_catedral/content/ray_shader" method="_on_area_2d_body_shape_entered"]
[connection signal="body_shape_entered" from="lasers_descendo/laser_descendo_catedral4/content/ray_shader/Area2D" to="lasers_descendo/laser_descendo_catedral4/content/ray_shader" method="_on_area_2d_body_shape_entered"]
[connection signal="body_shape_entered" from="lasers_descendo/laser_descendo_catedral3/content/ray_shader/Area2D" to="lasers_descendo/laser_descendo_catedral3/content/ray_shader" method="_on_area_2d_body_shape_entered"]
[connection signal="body_shape_entered" from="lasers_descendo/laser_descendo_catedral2/content/ray_shader/Area2D" to="lasers_descendo/laser_descendo_catedral2/content/ray_shader" method="_on_area_2d_body_shape_entered"]
